--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,7 @@
+body{
+  background: #241d87;
+}
+
 .table-loader-box {
   height: 30px;
   background-color: #f0f0f0;
@@ -14,15 +18,6 @@
   left: -100px; /* Start position outside the box */
   animation: flash-animation 1s linear infinite; /* Animation properties */
 }
-.materialQuantity {
-  margin-left: 0.5rem;
-  color: red;
-}
-
-.productQuantity {
-  margin-left: 0.5rem;
-  color: green;
-}
 
 @keyframes flash-animation {
   0% {
@@ -31,4 +26,43 @@
   100% {
     left: 100%; /* End position */
   }
+}
+
+.sideBar {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  width: 250px;
+}
+.page {
+  margin: 10% 10%;
+  border-bottom: 2px solid transparent;
+  background-image: linear-gradient(to bottom, transparent, transparent);
+  transition: color 0.2s linear, border-bottom 0.2s linear, background-image 0.5s linear;
+  background-image: linear-gradient(to bottom, #fff, #f8f9fa); /* Linear gradient background */
+  border-radius: 5px; /* Rounded corners */
+  padding-left: 12px;
+  width: 110%;
+}
+
+.page:hover {
+  color: #241d87;
+  border-bottom: 2px solid #241d87;
+  background-image: linear-gradient(to top , #241d87 , #EFEFF1 , #fff );
+  background-color: #e9ecef; /* Background color on hover */
+}
+
+.nav-link.active {
+  border-bottom: 2px solid #241d87;
+  color: #fff;
+  font-weight: bold;
+  background-image: linear-gradient(to top , #241d87 ,  #EFEFF1 , #fff );
+}
+.pageContent {
+  border-radius: 30px;
+  border: black 1px solid;
+  background-color: rgba(255, 255, 255, 0.293);
+  padding: 2% 10% 5% 5%;
+  margin: auto;
+  color: whitesmoke;
 }
