--- a/public/style.css
+++ b/public/style.css
@@ -31,7 +31,6 @@ body{
 .sideBar {
   display: flex;
   flex-direction: column;
-  position: fixed;
   width: 250px;
 }
 .page {
@@ -65,4 +64,42 @@ body{
   padding: 2% 10% 5% 5%;
   margin: auto;
   color: whitesmoke;
+}
+@media (max-width:1000px) {
+  .sideBar {
+    display: flex;
+    flex-direction: row;
+    border-radius: 10px;
+    padding: 0;
+    width: 94%;
+    margin: 1% 3% ;
+  }
+
+  .navbar-nav {
+    display: flex;
+    flex-direction: row;
+    /* Align items horizontally */
+    list-style: none;
+    /* Remove default list styling */
+    padding: 0;
+    /* Remove default padding */
+  }
+
+  .page {
+    margin: 10% 5px;
+    
+    text-align: center;
+    
+  }
+
+  .pageInPhone {
+    display: inline;
+  }
+
+  .none {
+    display: none;
+  }
+  .pageContent{
+    width: 94%;
+  }
 }
